Update tasks and vars to install tomcat8

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,12 +1,10 @@
 ---
-- name: Ensure Tomcat6 packages are installed (RedHat).
+- name: Ensure Tomcat8 packages are installed (RedHat).
   yum:
     name: "{{ item }}"
     state: installed
   with_items:
-    - tomcat6
-    - tomcat6-webapps
-    - tomcat6-admin-webapps
+    - tomcat8
   when: ansible_os_family == 'RedHat'
 
 - name: Update apt cache (Debian).
@@ -15,24 +13,27 @@
     cache_valid_time: 86400
   when: ansible_os_family == 'Debian'
 
-- name: Ensure Tomcat6 is installed (Debian).
+- name: Ensure Tomcat8 is installed (Debian).
   apt:
-    name: tomcat6
+    name: "{{ item }}"
     state: installed
+  with_items:
+    - tomcat8
+    - tomcat8-admin
   when: ansible_os_family == 'Debian'
 
-- name: Copy tomcat6 server.xml.
+- name: Copy tomcat8 server.xml.
   template:
     src: server.xml.j2
-    dest: /etc/tomcat6/server.xml
+    dest: /etc/tomcat8/server.xml
     owner: root
     group: root
     mode: 0644
   notify: restart tomcat
 
-- name: Ensure tomcat6 is running.
+- name: Ensure tomcat8 is running.
   service:
-    name: tomcat6
+    name: tomcat8
     state: started
     enabled: yes
-  when: tomcat6_enabled
+  when: tomcat8_enabled
