--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -17,6 +17,16 @@
     state: present
   when: ansible_os_family == 'Debian'
 
+- name: copy tomcat defaults file
+  template:
+    src: 'tomcat-defaults.j2'
+    dest: '/etc/default/tomcat8'
+    backup: yes
+    owner: root
+    group: root
+    mode: 0644
+  notify: Restart Tomcat
+
 - name: Copy tomcat8 server.xml.
   template:
     src: server.xml.j2
@@ -32,3 +42,4 @@
     state: started
     enabled: yes
   when: tomcat8_enabled
+
